# PokemonTTM

./: README.md  downloadDB.py  logs.py  main.py  pokemonDatabase.py  pyproject.toml
static/: styles.css
templates/: index.html  pokemon.js  pokemonCard.html
