[tool.poetry]
name = "pokemonttm"
version = "0.1.0"
description = ""
authors = ["alistairgrenyer <alistair.grenyer@capgemini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
